@@ -129,8 +129,8 @@ enum srv_atr {
         SRV_ATR_DownOnError,
         SRV_ATR_JobNanny,
         SRV_ATR_MomJobSync,
-#include "site_svr_attr_enum.h"
 	SRV_ATR_version,
+#include "site_svr_attr_enum.h"
 	/* This must be last */
 	SRV_ATR_LAST
 };
